--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login - Boy Alone Records</title>
+    <title>Sign up - Boy Alone Records</title>
     <link rel="icon" href="assets/BOY ALONE LABEL icon.png" />
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -16,15 +16,16 @@
         height="50vh"
         id="limg"
       />
-      <h1 style="display: flex; justify-content: center;"><b>Login In</b></h1>
+      <h1 style="display: flex; justify-content: center;"><b>Sign up</b></h1>
       <hr />
       <br />
       <label for="name">Name</label><br />
       <input type="text" id="name" /><br /><br />
-      <label for="password">Password</label><br />
-      <input type="password" id="password" /><br /><br />
-      <button type="submit" class="lbtn" onclick="openPopup()">Login</button><br><br>
-      <h4 style="margin-top: -0.5px;">Dont have an Account? <a href="signup.html">Sign up</a></h4>
+      <label for="email">Email</label><br />
+      <input type="email" id="email" /><br /><br />
+      <button type="submit" class="lbtn" onclick="openPopup()">Sign up</button><br><br>
+      <h4 style="margin-top: -0.5px;">Already have an Account? <a href="index.html">Sign in</a></h4>
+
       
       <div class="popup" id="popup">
         <div class="lbody">
