--- a/artist.html
+++ b/artist.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BOY ALONE RECORDS</title>
+    <title>Artists - Boy Alone Records</title>
     <link rel="icon" href="assets/BOY ALONE LABEL icon.png" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="assets/BOY ALONE LABEL icon.png" />
@@ -65,7 +65,7 @@
           <div class="offcanvas-body" id="ham">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="login.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="artist.html">Artists</a>
@@ -95,7 +95,7 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto d-none d-lg-flex"  id="nav-bar">
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
+              <a class="nav-link" href="login.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="artist.html">Artists</a>
