--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
       <h4 style="margin-top: -0.5px;">Dont have an Account? <a href="signup.html">Sign up</a></h4>
       
       <div class="popup" id="popup">
+
         <div class="lbody">
+          <img src="assets/verified-iconwebp.webp" alt="icon" style="scale: 0.7;" />
         <h1
-          style="margin-left: 85%; margin-bottom: -17%; cursor: pointer"
+          style="margin-left: 85%; margin-top: -5%; cursor: pointer"
           onclick="closePopup()"
         >
-          ❌
+        <span style="color: #ff0000; font-size: 24px;">❌</span>
+
         </h1>
         <h2>Thank you!</h2>
         <p>Your details have successfully been submitted. Thanks!</p>
