--- a/services.html
+++ b/services.html
@@ -125,7 +125,7 @@
                       <img src="assets/drake-lil-baby-celebration-atlanta-2022-billboard-1548.webp" alt="Brand Partnership" class="img-fluid mb-3">
                       <h4 class="fw-bold">Brand Partnership & Activation</h4>
                       <p>Collaborate with BOY ALONE RECORDS to develop tailor-made branded solutions for your marketing campaigns and brand activation efforts.</p>
-                      <a href="#" class="btn btn-outline-light">Start Collaborating</a>
+                      <a href="divinetimothyeriq454@gmail.com" class="btn btn-outline-light">Start Collaborating</a>
                   </div>
               </div>
               <!-- Service 2: Music Sync & Licensing -->
@@ -134,7 +134,7 @@
                       <img src="assets/istockphoto-2156128571-1024x1024.jpg" alt="Music Sync & Licensing" class="img-fluid mb-3">
                       <h4 class="fw-bold">Music Sync & Licensing</h4>
                       <p>Leverage our diverse catalog for use in games, TV shows, movies, or commercials.</p>
-                      <a href="#" class="btn btn-outline-light">Use Our Music</a>
+                      <a href="divinetimothyeriq454@gmail.com" class="btn btn-outline-light">Use Our Music</a>
                   </div>
               </div>
               <!-- Service 3: Performance & Appearances -->
@@ -143,7 +143,7 @@
                       <img src="assets/Eminem-Live-from-Detroit-The-Concert-at-Michigan-Central-billboard-1548_8e7359.webp" alt="Performance & Appearances" class="img-fluid mb-3">
                       <h4 class="fw-bold">Performance & Appearances</h4>
                       <p>We create and manage bespoke events for you or your brand, handling everything from technical arrangements to venue selection.</p>
-                      <a href="#" class="btn btn-outline-light">Book Now</a>
+                      <a href="divinetimothyeriq454@gmail.com" class="btn btn-outline-light">Book Now</a>
                   </div>
               </div>
               <!-- Service 4: Content Production -->
@@ -152,7 +152,7 @@
                       <img src="assets/music-producer-working-recording-studio-view-back-260521779.webp" alt="Content Production" class="img-fluid mb-3">
                       <h4 class="fw-bold">Content Production</h4>
                       <p>Our creative team crafts custom-made content suitable for you or your brand.</p>
-                      <a href="#" class="btn btn-outline-light">Send Us a Message</a>
+                      <a href="divinetimothyeriq454@gmail.com" class="btn btn-outline-light">Send Us a Message</a>
                   </div>
               </div>
           </div>
