changing login.htm to page.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </h1>
         <h2>Thank you!</h2>
         <p>Your details have successfully been submitted. Thanks!</p>
-        <a href="login.html"
+        <a href="page.html"
           ><button type="button" class="popbtn">Continue</button></a
         >
       </div>
