--- a/releases.html
+++ b/releases.html
@@ -63,7 +63,7 @@
               <div class="offcanvas-body" id="ham">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="login.html">Home</a>
+                    <a class="nav-link" href="page.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="artist.html">Artists</a>
@@ -95,7 +95,7 @@
             <div class="collapse navbar-collapse">
               <ul class="navbar-nav ms-auto d-none d-lg-flex" id="nav-bar">
                 <li class="nav-item">
-                  <a class="nav-link" href="login.html">Home</a>
+                  <a class="nav-link" href="page.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="artist.html">Artists</a>
