--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         <!-- </form> -->
         <div class="popup" id="popup">
           <div class="lbody">
+            <img
+              src="assets/verified-iconwebp.webp"
+              alt="icon"
+              style="scale: 0.7"
+              id="popimg2"
+            />
             <h1
               style="margin-left: 85%; margin-top: -5%; cursor: pointer"
               onclick="closePopup()"
