adding some chages to the page

--- a/page.html
+++ b/page.html
@@ -325,6 +325,7 @@
       src="assets/1738350498267.png.jpg"
       class="card-img-top"
       alt="Artist 1"
+      id="pageim"
     />
     <div class="card-body" id="card-body1">
       <h4
@@ -351,6 +352,7 @@
               src="assets\IMG_20240712_154441.jpg"
               class="card-img-top"
               alt="Artist 1"
+              id="pageim"
             />
             <div class="card-body" id="card-body1">
               <h4
@@ -378,6 +380,7 @@
               src="./assets/1735854669021.jpg"
               class="card-img-top"
               alt="Artist 1"
+              id="pageim"
             />
             <div class="card-body" id="card-body1">
               <h4
@@ -387,7 +390,7 @@
                 <b>Love Anthem</b>
               </h4>
               <h5 class="card-title"
-                style="color: white; font-family: Arial; font-weight: bold">Young Tee ft Eriq Lay</h5>
+                style="color: white; font-family: Arial; font-weight: bold">Young Tee x Eriq</h5>
               <p class="card-text" style="color: rgba(255, 255, 255, 0.58)">Genre: Afrobeat</p>
               <a
                 href="https://audiomack.com/eriq-dave/song/love-anthem-daveflavercom?share-user-id=77103724"
