adding swith button and profile to the page

--- a/signup.html
+++ b/signup.html
@@ -41,7 +41,7 @@
         </datalist>
         
         <button type="submit" class="lbtn" onclick="openPopup()">Sign up</button><br><br>
-        <h4 style="margin-top: -0.5px;">Already have an Account? <a href="index.html">Sign up</a></h4>
+        <h4 style="margin-top: -0.5px;">Already have an Account? <a href="login.html">Sign up</a></h4>
     
       <div class="popup" id="popup">
         <div class="lbody">
@@ -54,7 +54,7 @@
           <h1 style="margin-left: 85%; margin-bottom: -17%; cursor: pointer" onclick="closePopup()" id="popicon2">❌</h1>
           <h2>Thank you!</h2>
           <p>Your details have successfully been submitted. Thanks!</p>
-          <a href="page.html"><button type="button" class="popbtn">Continue</button></a>
+          <a href="index.html"><button type="button" class="popbtn">Continue</button></a>
         </div>
       </div>
     </div>
