--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
             </h1>
             <h2>Thank you!</h2>
             <p>Your details have successfully been submitted. Thanks!</p>
-            <a href="login.html"
+            <a href="index.html"
               ><button type="button" onclick="setUserName()" id="myBtn" class="popbtn">
                 Continue
               </button></a
