adding functionality to other switch button

--- a/releases.html
+++ b/releases.html
@@ -240,5 +240,17 @@
 </div>
         </main>
       </section>
+      <script>
+                   var btn = document.getElementById("btn");
+function leftClick(){
+  btn.style.left = '0'
+
+}
+
+function rightClick(){
+  btn.style.left = '55px'
+
+}
+      </script>
 </body>
 </html>
