--- a/profile.html
+++ b/profile.html
@@ -150,5 +150,17 @@
     </div>
 
     <script src="/main.js"></script>
+    <script>
+                 var btn = document.getElementById("btn");
+function leftClick(){
+  btn.style.left = '0'
+
+}
+
+function rightClick(){
+  btn.style.left = '55px'
+
+}
+    </script>
 </body>
 </html>
