--- a/services.html
+++ b/services.html
@@ -227,5 +227,18 @@
 
   </style>
   
+
+  <script>
+               var btn = document.getElementById("btn");
+function leftClick(){
+  btn.style.left = '0'
+
+}
+
+function rightClick(){
+  btn.style.left = '55px'
+
+}
+  </script>
   </body>
 </html>
